2003-09-05  Paul Eggert  <eggert@twinsun.com>

	* NEWS, aclocal.in, automake.in, automake.texi, lib/ansi2knr.c,
	lib/depcomp, lib/missing, lib/py-compile,
	lib/Automake/Channels.pm, lib/Automake/Rule.pm,
	lib/Automake/Variable.pm, lib/Automake/tests/Condition.pl,
	lib/am/dejagnu.am, lib/am/depend.am, lib/am/lisp.am,
	lib/am/remake-hdr.am, lib/am/texi-vers.am, m4/obsolete.m4,
	m4/python.m4, tests/backsl4.test, tests/defs.in,
	tests/dejagnu7.test, tests/depacl2.test, tests/dirlist.test,
	tests/error.test, tests/getopt.test, tests/gnuwarn.test,
	tests/include2.test, tests/libobj10.test, tests/libtool5.test,
	tests/libtool6.test, tests/lisp3.test, tests/phony.test,
	tests/pr220.test, tests/subcond2.test, tests/subcond3.test,
	tests/vtexi.test:
	Spelling and minor grammar fixes.

2003-09-01  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/config.sub, lib/config.guess, lib/texinfo.tex,
	lib/config-ml.in, lib/symlink-tree: New upstream versions.

2003-08-31  Thien-Thi Nguyen  <ttn@gnu.org>  (tiny change)

	* tests/yacc7.test: Require bison.

2003-08-31  Alexandre Duret-Lutz  <adl@gnu.org>

	* aclocal.in (scan_file): Warn about underquoted AC_DEFUN.
	($underquoted_manual_once): New variable.
	* automake.texi (Extending aclocal): Document this.

2003-08-29  Alexandre Duret-Lutz  <adl@gnu.org>

	* aclocal.in (@file_order): New variable, to make sure
	files are output in the opposite order of the -I arguments.
	(scan_file): Fill it.
	(trace_used_macros, write_aclocal): Use it.
	(scan_m4_files): Reverse the directory contents, so that
	macros from the lexicographically greatest files are preferred.
	* tests/aclocal9.test, tests/acloca10.test, tests/acloca11.test:
	New files.
	* tests/Makefile.am (TESTS): Add them.

2003-08-24  Alexandre Duret-Lutz  <adl@gnu.org>

	For Debian Bug #206299:
	* automake.in ($configure_deps_greatest_timestamp,
	$output_deps_greatest_timestamp): New variables.
	(initialize_per_input): Reset $output_deps_greatest_timestamp.