@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 1998, 2002  Free Software Foundation, Inc.
+# Copyright (C) 1998, 2002, 2003  Free Software Foundation, Inc.
 #
 # This file is part of GNU Automake.
 #
@@ -28,9 +28,9 @@ MACRO_1_2_3
 END
 
 cat > acinclude.m4 << 'END'
-AC_DEFUN(MACRO_1, echo 1)
-AC_DEFUN(MACRO_1_2, echo 12)
-AC_DEFUN(MACRO_1_2_3, echo 123)
+AC_DEFUN([MACRO_1], echo 1)
+AC_DEFUN([MACRO_1_2], echo 12)
+AC_DEFUN([MACRO_1_2_3], echo 123)
 END
 
 $ACLOCAL 2> output || exit 1
