@@ -1,3 +1,7 @@
+2003-09-06  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* tests/unused.test: Quote AC_DEFUN arguments.
+
 2003-09-05  Paul Eggert  <eggert@twinsun.com>
 
 	* NEWS, aclocal.in, automake.in, automake.texi, lib/ansi2knr.c,
